# ProyectoFinal

./: .gitignore  README.md  requirements.txt  run_all.bat  run_all.sh
Interfaz/: config.py  main.py  ni6009_feeder.py  presets.json  sound_test.py
Interfaz/server/: receiver_app.py  receiver_c.py
Interfaz/ui/: effect_widget.py  main_window.py
android/app/src/main/: AndroidManifest.xml
audio_rpi/: Makefile  ni6009_feeder.py
audio_rpi/gui/: .gitignore  CMakeLists.txt  README.md  app_receiver.cpp  app_receiver.hpp  gui.cpp  gui.hpp  main.cpp  preset_model.cpp  preset_model.hpp  socket_client.cpp  socket_client.hpp
audio_rpi/include/: NIDAQmx.h  chorus.h  config.h  delay.h  digipot_x9103p.h  distortion.h  dsp.h  flanger.h  overdrive.h  phaser.h  phasor.h  pitch_shifter.h  pitchshifter_dsp.h  reverb.h  serial_input.h  socket_server.h  wah.h
audio_rpi/latency_testing/: Makefile  README.md  run_all_cpp.bat  run_gui.bat
audio_rpi/latency_testing/c_gui/: CMakeLists.txt  app_receiver.cpp  app_receiver.hpp  effect_manager.c  effect_manager.h  fft_processor.cpp  fft_processor.hpp  gui.cpp  gui.hpp  gui_main.c  main.cpp  preset_manager.cpp  preset_manager.hpp  socket_client.c  socket_client.h  visualizer.c  visualizer.h
audio_rpi/latency_testing/latency_tools/: latency_benchmark.c  latency_monitor.h  latency_test.c
audio_rpi/src/: chorus.c  chorus.cpp  delay.c  digipot_x9103p.c  distortion.c  flanger.c  main.c  ni_feeder.c  overdrive.c  overdrive.cpp  phaser.c  pitch_shifter.c  pitch_shifter.cpp  reverb.cpp  serial_input.c  socket_server.c  wah.c
